# TheInquilab

./: .env  .gitignore  .python-version  README.md  pyproject.toml
core/: api.py  settings.py  urls.py
gallery/: admin.py  models.py  urls.py  views.py
gallery/migrations/: 0001_initial.py  0002_alter_gallery_options.py
mediapersonality/: admin.py  apps.py  models.py  views.py
mediapersonality/migrations/: 0001_initial.py
newslist/: admin.py  api.py  apps.py  bn_taggit.py  forms.py  models.py  sitemap.py  urls.py  views.py
newslist/migrations/: 0001_initial.py  0002_news_tags.py  0003_alter_news_title_alter_news_title_en.py  0004_alter_news_options.py  0005_news_archive_link.py  0006_news_image.py  0007_news_is_killed.py  0008_userreport_alter_news_is_killed.py  0009_userreport_report_time.py  0010_userreport_tags.py  0011_alter_userreport_tags.py  0012_bntag_bntaggeditem_alter_userreport_content_and_more.py  0013_userreport_image.py  0014_alter_news_options_alter_userreport_options.py  0015_alter_news_archive_link.py  0016_martyr.py  0017_alter_martyr_options_martyr_death.py  0018_auto_20240806_0314.py  0019_alter_martyr_short_description.py  0020_longdescription.py  0021_alter_longdescription_martyr_model.py  0022_martyr_approved_martyr_birth_delete_userreport.py  0023_remove_news_title_en_alter_news_title.py  0024_news_approved.py  0025_alter_martyr_approved_alter_martyr_birth_and_more.py  0026_martyr_slug.py  0027_auto_20240810_1300.py  0028_auto_20240810_1310.py  0029_alter_martyr_slug.py  0030_delete_bntag_delete_bntaggeditem_remove_news_tags.py  0031_news_published.py  0032_alter_news_options.py  0033_alter_news_archive_link_alter_news_link.py  0034_alter_martyr_image.py
static/css/: full.css  style.css  styles.css
static/favicon/: site.webmanifest
templates/: 404.html  base.html  home.html
templates/gallery/: galleries.html
templates/martyrs/: martyrs.html  martyrs_details.html  report.html
templates/news/: newslist.html  report.html  (+3 more)
timeline/: admin.py  models.py  urls.py  views.py
user/: admin.py  models.py
(+10 files in other folders)
