[project]
name = "quotaarchive"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rozari0", email = "61970262+rozari0@users.noreply.github.com" }
]
dependencies = [
    "django>=5.0.7",
    "django-taggit>=5.0.1",
    "django-unfold>=0.30.0",
    "django-crispy-forms>=2.2",
    "crispy-bootstrap5>=2024.2",
    "python-slugify>=8.0.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
